// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactDetails renders 1`] = `
<div
  className="contact_container"
>
  <p
    className="email"
  >
    Email: jon_hardiman@xxxxx.com
  </p>
   
  <p
    className="number"
  >
    Tel: 01235 666 xxx
  </p>
   
</div>
`;

exports[`Navbar renders 1`] = `
<nav>
  <div
    className="nav_bar"
  >
    <h1
      className="logo"
    >
      LOGO
    </h1>
    <a
      className="nav_link"
      onClick={[Function]}
      style={Object {}}
    >
      Home
    </a>
    <a
      className="nav_link"
      onClick={[Function]}
      style={Object {}}
    >
      About
    </a>
    <a
      className="nav_link"
      onClick={[Function]}
      style={Object {}}
    >
      Services
    </a>
    <a
      className="nav_link"
      onClick={[Function]}
      style={Object {}}
    >
      Portfolio
    </a>
    <a
      className="nav_link"
      onClick={[Function]}
      style={Object {}}
    >
      Contact
    </a>
    <div
      className="contact_container"
    >
      <p
        className="email"
      >
        Email: jon_hardiman@xxxxx.com
      </p>
       
      <p
        className="number"
      >
        Tel: 01235 666 xxx
      </p>
       
    </div>
  </div>
</nav>
`;
